# persistence-kit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-preview.yml  publish-pypi.yml
docs/: repositories_and_relations.md
persistence-kit/: abstract_repository.py  config.py
persistence-kit/repository/: filter_ops.py
persistence-kit/repository/mongo_repo/: __init__.py  mongo_mapper.py
persistence-kit/repository/sqlalchemy_repo/: schema_evolve.py
persistence-kit/repository_factory/: repo_factory.py
persistence_kit/: __init__.py  abstract_view_repo.py
persistence_kit/api/: __init__.py  common.py  error_handlers.py  exceptions.py  route_loader.py
persistence_kit/bootstrap/: __init__.py  configuration.py  seeders.py  startup.py
persistence_kit/contracts/: __init__.py  repository.py  view_repository.py
persistence_kit/repository/: __init__.py  filter_ops.py
persistence_kit/repository/dynamodb_repo/: dynamodb_mapper.py  dynamodb_repo.py
persistence_kit/repository_factory/: __init__.py  entity_registry.py  populating_repo.py
persistence_kit/settings/: __init__.py  constants.py  parsers.py  repo_settings.py
persistence_kit/utils/: __init__.py  upsert.py
scripts/: publish-local.sh
tests/: test_api_common.py  test_config_parsers.py  test_configuration.py  test_error_handlers.py  test_exceptions.py  test_route_loader.py  test_seeders.py  test_upsert_utils.py
tests/repository/: test_filter_ops.py
tests/repository_factory/: test_entity_registry.py  test_populating_repo.py  test_repo_factory.py
(+25 files in other folders)
